--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+    padding: 0;
 }
 .font-primary {
     font-family: 'Inter', sans-serif;
@@ -34,13 +35,15 @@
 /* banner section */
 
 .banner {
-    background-image: url('../images/donation1.jpg');
+    background-image: url('../images/donationBanner.jpg');
     background-repeat: no-repeat;
     background-color: gray;
     background-blend-mode: multiply;
     background-size: cover;
     display: flex;
     justify-content: center;
+    height: 100vh;
+    width: 100%;
 }
 .banner-content {
     padding: 320px 0;
